baml_language/crates/baml_tests/snapshots/compiles/bigint_cmp/baml_tests__compiles__bigint_cmp__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.EqSameAlloc() -> bool throws never {
  { : true
    42n == 42n : true
  }
}
function user.EqDistinctAllocs() -> bool throws never {
  { : bool
    let a: bigint = 42n : 42n -> bigint
    let b: bigint = bigint.parse("42") : bigint
    a == b : bool
  }
}
function user.OrderingLt() -> bool throws never {
  { : true
    3n < 5n : true
  }
}
function user.OrderingGtEq() -> bool throws never {
  { : true
    5n >= 5n : true
  }
}
