baml_language/crates/baml_tests/snapshots/compiles/bigint_cmp/baml_tests__compiles__bigint_cmp__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.EqDistinctAllocs() -> bool {
    load_const "42"
    call baml.Bigint.parse
    store_var b
    load_const 42n
    load_var b
    cmp_bigint_op ==
    return
}

function user.EqSameAlloc() -> bool {
    load_const 42n
    load_const 42n
    cmp_bigint_op ==
    return
}

function user.OrderingGtEq() -> bool {
    load_const 5n
    load_const 5n
    cmp_bigint_op >=
    return
}

function user.OrderingLt() -> bool {
    load_const 3n
    load_const 5n
    cmp_bigint_op <
    return
}
